# eth-trading-mcp

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
config/: default.yaml  test.yaml
examples/: eth_trading_client.rs  interactive_gemini_agent.rs
src/: app.rs  config.rs  lib.rs  main.rs
src/middleware/: trace.rs
src/repository/: alloy.rs  contract.rs  error.rs  mod.rs
src/service/: error.rs  mod.rs  tests.rs  token_registry.rs  trading.rs  types.rs  utils.rs
