[package]
name = "eth-trading-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.2", features = [
    "provider-http",
    "rpc-types",
    "sol-types",
    "contract",
    "signer-local",
    "network",
] }
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = "0.4"
dotenv = "0.15.0"
envsubst = "0.2.1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.8.5", features = [
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
rust_decimal = "1.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
ctor = "0.6.1"
eventsource-client = "0.15.1"
futures = "0.3.31"
reqwest = "0.12.24"
rig-core = { version = "0.24.0", features = ["derive", "rmcp"] }
rig-derive = "0.1.8"
rmcp = { version = "0.8.5", features = [
    "client",
    "client-side-sse",
    "transport-sse-client",
    "transport-sse-client-reqwest",
] }
serial_test = "3.2"
